--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -7,6 +7,14 @@
     "module": "ESNext",
     "skipLibCheck": true,
 
+  //shadcn/ui
+    "baseUrl": ".",
+    "paths": {
+      "@/*": [
+        "./src/*"
+      ]
+    },
+
     /* Bundler mode */
     "moduleResolution": "Bundler",
     "allowImportingTsExtensions": true,
