--- a/.prettierrc
+++ b/.prettierrc
@@ -2,7 +2,7 @@
   "trailingComma": "es5",
   "printWidth": 80,
   "tabWidth": 2,
-  "semi": false,
+  "semi": true,
   "singleQuote": true,
   "jsxSingleQuote": true,
   "jsxBracketSameLine": false
